bk_ida/gobmkida/c2/autohelperowl_attackpat54
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_attackpat54/src/patterns/owl_attackpat.c:2172:28: error: use of undeclared identifier 'invalid_operation'
return !( ( v5 + v6 < 0) ^ __OFADD__( v5, v6) | ( v5 + v6 == 0)); 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_attackpat54/src/patterns/owl_attackpat.c:1971:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/autohelperowl_attackpat54/src/obj/3/owl_attackpat.o] Error 1
